# routes/index.js
@@ -1,9 +1,19 @@
 const router = require('express').Router();
-const controllers = require("../controllers");
+const passport = require('passport');
 
 router.use('/', require('./swagger'));
-router.get('/', controllers.helloWorld);
 router.use('/users', require('./users'));
 router.use('/books', require('./books'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {
+})
+router.get('/logout', function (req, res, next) {
+  req.logout(function (err) {
+    if (err) {
+      return next(err);
+    }
+    res.redirect('/');
+  })
+})
 
 module.exports = router;
