# swagger.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Users API",
-    "description": "Users API",
+    "title": "Library API",
+    "description": "Library API",
     "version": "1.0.0"
   },
   "host": "web-service-2-yyd0.onrender.com",
@@ -11,15 +11,32 @@
     "https"
   ],
   "paths": {
-    "/": {
+    "/login": {
       "get": {
-        "tags": [
-          "Hello World"
-        ],
         "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -55,25 +72,25 @@
               "type": "object",
               "properties": {
                 "firstName": {
-                  "example": "John"
+                  "example": "any"
                 },
                 "lastName": {
-                  "example": "Doe"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "email@email.com"
+                  "example": "any"
                 },
                 "username": {
-                  "example": "username"
+                  "example": "any"
                 },
                 "password": {
-                  "example": "1234awsd"
+                  "example": "any"
                 },
                 "birthDate": {
-                  "example": "2000-01-01"
+                  "example": "any"
                 },
                 "address": {
-                  "example": "Address 123"
+                  "example": "any"
                 }
               }
             }
@@ -85,6 +102,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -143,25 +163,25 @@
               "type": "object",
               "properties": {
                 "firstName": {
-                  "example": "John"
+                  "example": "any"
                 },
                 "lastName": {
-                  "example": "Doe"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "email@email.com"
+                  "example": "any"
                 },
                 "username": {
-                  "example": "username"
+                  "example": "any"
                 },
                 "password": {
-                  "example": "1234awsd"
+                  "example": "any"
                 },
                 "birthDate": {
-                  "example": "2000-01-01"
+                  "example": "any"
                 },
                 "address": {
-                  "example": "Address 123"
+                  "example": "any"
                 }
               }
             }
@@ -173,6 +193,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -204,6 +227,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -242,28 +268,28 @@
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "Title"
+                  "example": "any"
                 },
                 "author": {
-                  "example": "Author"
+                  "example": "any"
                 },
                 "genre": {
-                  "example": "Genre"
+                  "example": "any"
                 },
                 "publicationYear": {
-                  "example": 1984
+                  "example": "any"
                 },
                 "isbn": {
-                  "example": "978-0-06-085052-4"
+                  "example": "any"
                 },
                 "availableCopies": {
-                  "example": 10
+                  "example": "any"
                 },
                 "publisher": {
-                  "example": "Publisher"
+                  "example": "any"
                 },
                 "language": {
-                  "example": "English"
+                  "example": "any"
                 }
               }
             }
@@ -275,6 +301,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -333,28 +362,28 @@
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "Title"
+                  "example": "any"
                 },
                 "author": {
-                  "example": "Author"
+                  "example": "any"
                 },
                 "genre": {
-                  "example": "Genre"
+                  "example": "any"
                 },
                 "publicationYear": {
-                  "example": 1984
+                  "example": "any"
                 },
                 "isbn": {
-                  "example": "978-0-06-085052-4"
+                  "example": "any"
                 },
                 "availableCopies": {
-                  "example": 10
+                  "example": "any"
                 },
                 "publisher": {
-                  "example": "Publisher"
+                  "example": "any"
                 },
                 "language": {
-                  "example": "English"
+                  "example": "any"
                 }
               }
             }
@@ -366,6 +395,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -397,6 +429,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
